--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2018"
 [dependencies]
 sha3 = "0.8.1"
 digest = "*"
+
+[dependencies.clap]
+version = "2.32"
+default-features = false
+
+# Cherry-pick the features you'd like to use
+features = [ "suggestions", "color" ]
