--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 [dependencies]
 sha2 = "*"
 sha3 = "*"
-ripemd160 = "*"
-ripemd320 = "*"
+ripemd = "*"
 md2 = "*"
 md4 = "*"
 md-5 = "*"
